--- a/src/index.scss
+++ b/src/index.scss
@@ -78,6 +78,6 @@ button {
 @media (prefers-color-scheme: dark) {
   :root {
     --theme-background: #0E050C;
-    --theme-text: #fff;
+    --theme-text: #bfbfbf;
   }
 }
